--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ p{
 body{
     background-color: #ddf8ee;
     overflow-x: hidden;
+    height: 100vh;
 }
 
 .top{
@@ -31,10 +32,13 @@ h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+/* Norway*/
+
 .Norway{
     position: absolute;
     top: 50%;
     left: 10%;
+    margin: 10px 50px 10px 0;
 }
 
 .Norway-main{
@@ -84,6 +88,8 @@ h1{
     text-align: center;
 }
 
+/*Austria*/
+
 .austria-main{
     background-color: #ed2939;
     width: 225px;
@@ -103,6 +109,7 @@ h1{
     position: absolute;
     top: 50%;
     left: 40%;
+    margin: 10px 50px 10px 0;
 }
 
 .austria-p{
@@ -112,17 +119,67 @@ h1{
     text-align: center;
 }
 
+/*Sweden*/
+
+.Sweden-main{
+    background-color: #005293;
+    width: 400px;
+    height: 250px;
+    position: relative;
+}
+
+.Sweden-ho{
+    background-color: #fecb00;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    top: 100px;
+}
+
+.Sweden-ver{
+    background-color: #fecb00;
+    width: 50px;
+    height: 100%;
+    position: absolute;
+    left: 125px;
+}
+
+.Sweden{
+    position: absolute;
+    top: 50%;
+    left: 65%;
+    margin: 10px 50px 10px 0;
+}
+
+.Sweden-p{
+    font-size: 20px;
+    position: relative;
+    top: 250px;
+    text-align: center;
+}
+
+
 @media (max-width:900px)  {
+
+    body{
+        overflow-x: hidden;
+    }
 
     .austria{
         position: absolute;
-        top: 90%;
+        top: 600px;
         left: 10%;
     }
 
     .Norway{
         position: absolute;
         top: 50%;
+        left: 10%;
+    }
+
+    .Sweden{
+        position: absolute;
+        top: 900px;
         left: 10%;
     }
   
